Final-Capstone/kubernetes/k8s/dev/deployments.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: incident-tracker-sa
      containers:
        - name: api-gateway
          image: incidenttracker.azurecr.io/api-gateway:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
            - name: shared-temp-data
              mountPath: /app/.backend-logs/tmp
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kv-secrets"
        - name: shared-temp-data
          persistentVolumeClaim:
            claimName: shared-temp-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-ui
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-ui
  template:
    metadata:
      labels:
        app: frontend-ui
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: incident-tracker-sa
      containers:
        - name: frontend-ui
          image: incidenttracker.azurecr.io/web-app:1041f5e0be697ad108785642a8b948cfbe2c246f
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incidents-service
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: incidents-service
  template:
    metadata:
      labels:
        app: incidents-service
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: incident-tracker-sa
      containers:
        - name: incidents-service
          image: incidenttracker.azurecr.io/incidents-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8004
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
            - name: shared-temp-data
              mountPath: /app/.backend-logs/tmp
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kv-secrets"
        - name: shared-temp-data
          persistentVolumeClaim:
            claimName: shared-temp-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetry-store
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: telemetry-store
  template:
    metadata:
      labels:
        app: telemetry-store
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: incident-tracker-sa
      containers:
        - name: telemetry-store
          image: incidenttracker.azurecr.io/telemetry-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8002
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
            - name: shared-temp-data
              mountPath: /app/.backend-logs/tmp
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kv-secrets"
        - name: shared-temp-data
          persistentVolumeClaim:
            claimName: shared-temp-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analysis-service
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: analysis-service
  template:
    metadata:
      labels:
        app: analysis-service
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: incident-tracker-sa
      containers:
        - name: analysis-service
          image: incidenttracker.azurecr.io/analysis-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8003
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kv-secrets"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dependency-service
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dependency-service
  template:
    metadata:
      labels:
        app: dependency-service
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: incident-tracker-sa
      containers:
        - name: dependency-service
          image: incidenttracker.azurecr.io/dependency-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8005
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
            - name: shared-temp-data
              mountPath: /app/.backend-logs/tmp
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kv-secrets"
        - name: shared-temp-data
          persistentVolumeClaim:
            claimName: shared-temp-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingest-service
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingest-service
  template:
    metadata:
      labels:
        app: ingest-service
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: incident-tracker-sa
      containers:
        - name: ingest-service
          image: incidenttracker.azurecr.io/ingest-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
            - name: shared-temp-data
              mountPath: /app/.backend-logs/tmp
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kv-secrets"
        - name: shared-temp-data
          persistentVolumeClaim:
            claimName: shared-temp-data-pvc
